--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://baselineoverland.github.io/Eric-s-Adventure-K5-Build/">https://baselineoverland.github.io/Eric-s-Adventure-K5-Build/</a><br>
+                <a target="_bLank" href="https://baselineoverland.s3.us-east-005.backblazeb2.com/Eric's+Adventure+K5+Build/index.html">https://baselineoverland.s3.us-east-005.backblazeb2.com/Eric's+Adventure+K5+Build/index.html</a><br>
+                <a target="_bLank" href="https://eric-s-adventure-k5-build-git-main-baselineoverlands-projects.vercel.app/">https://eric-s-adventure-k5-build-git-main-baselineoverlands-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://eclectic-speculoos-9b1306.netlify.app/">https://eclectic-speculoos-9b1306.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
